# multiagent-handoff

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: index.py
docs/specs/: handoff-relay-hardening-spec.md
src/agent_community/: __init__.py  cli.py  models.py  orchestrator.py
src/agent_community/executor/: base_runner.py  claude_runner.py  codex_runner.py  process_pool.py  worktree_mgr.py
src/agent_community/merger/: branch_merger.py
src/agent_community/observer/: cost_tracker.py
src/agent_community/planner/: dag.py  decomposer.py
src/agent_community/router/: agent_registry.py
src/handoff/: __init__.py  _utils.py  crypto.py  migrations.py  monitor.py
src/handoff/a2a_adapter/: __init__.py  mapper.py
src/handoff/api/: __init__.py  server.py
src/handoff/framework_adapter/: __init__.py  crewai_adapter.py  langgraph_adapter.py
src/handoff/mcp_adapter/: __init__.py  server.py
src/handoff/models/: __init__.py  _pii.py  context.py  package.py  security.py  task.py
src/handoff/orchestrator/: __init__.py  injector.py  orchestrator.py  postgres_store.py  redis_store.py  s3_store.py  selector.py  store.py
src/handoff/serialization/: __init__.py  encrypted_serializer.py  serializer.py
src/handoff/skills/: CONTEXT_HANDOFF.md
src/handoff/summarizer/: __init__.py  llm_summarizer.py
src/handoff_relay/: __init__.py  _builders.py  _utils.py  cli.py  mcp_server.py  service.py
src/handoff_relay/adapters/: __init__.py  claude_code.py  codex.py  session_parser.py
src/handoff_relay/storage/: __init__.py  local_store.py
tests/: test_a2a_adapter.py  test_crypto.py  test_encrypted_serializer.py  test_framework_adapters.py  test_mcp_adapter.py  test_models.py  test_monitor.py  test_orchestrator.py  test_relay.py  test_relay_integration.py  test_serialization.py  test_stores.py  test_summarizer.py  test_switch.py
tests_community/: test_cli.py  test_dag.py  test_models.py  test_registry.py  test_worktree.py
