[project]
name = "agent-context-handoff"
version = "0.1.0"
description = "Agent Context Packaging & Handoff system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
redis = ["redis[hiredis]>=5.0"]
postgres = ["asyncpg>=0.29"]
crypto = ["cryptography>=42.0"]
api = [
    "fastapi>=0.110",
    "mangum>=0.17",
]
cli = [
    "typer>=0.12",
]
mcp = [
    "mcp>=1.0",
]
a2a = [
    "a2a-sdk>=0.1",
]
s3 = [
    "boto3>=1.34",
    "aiobotocore>=2.12",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "fakeredis>=2.20",
    "httpx>=0.27",
]

[project.scripts]
handoff-relay = "handoff_relay.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"
